# nudeform

./: CITATION.cff  README.md  pyproject.toml  setup.cfg
notebooks/: notebook.ipynb
notebooks/.ipynb_checkpoints/: notebook-checkpoint.ipynb
nudeform/: gui.py  model.py  version.py  view.py
nudeform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
