[metadata]
name = nudeform
version = attr: nudeform.version.__version__
author = DFreireF
url = https://github.com/DFreireF/nudeform
description = Collection of tools for the representation of nuclear shapes.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Nuclear physics, deformation
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    nudeform = nudeform.__main__:main